--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,6 @@
 	path = applications/main/subghz_remote
 	url = https://github.com/DarkFlippers/SubGHz_Remote.git
 	branch = ufw_main_app
+[submodule "assets/resources/infrared/Flipper-IRDB"]
+	path = assets/resources/infrared/Flipper-IRDB
+	url = https://github.com/Lucaslhm/Flipper-IRDB
